--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,5 @@ body {
   margin: 0;
   padding: 0;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Zetta:wght@400;700&display=swap');
